<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/White"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <TextView
                android:text="快速注册"
                android:id="@+id/itemtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/stroke_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手机号码"
            android:textSize="20sp"
            />
        <AutoCompleteTextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/gradient_box"
            android:id="@+id/phone_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/stroke_bg"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码"
            android:textSize="20sp"
            />
        <EditText
            android:layout_marginLeft="65dp"
            android:layout_marginRight="30dp"
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="6-12位数字字母"
            android:background="@drawable/gradient_box"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/stroke_bg"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认"
            android:textSize="20sp"
            />
        <EditText
            android:layout_marginLeft="65dp"
            android:layout_marginRight="30dp"
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:hint=""
            android:background="@drawable/gradient_box"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>
    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/sign_up_btn"
        style="?android:textAppearanceSmall"
        android:background="@drawable/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="立即登录"
        android:textColor="@color/White"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_info"
            />
        <TextView
            android:id="@+id/agreement"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/Red"
            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/loading_process_dialog_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/dialog_style_xml_color"
        android:visibility="gone"
        />


</LinearLayout>